ui/assets/styles/hc-dark.css
/* ... */
  .btn-link:focus, .interface-container .interface-row .interface-cell .interface-btn-toggle:focus {
    margin-bottom: -3px !important;
    border-bottom: 3px solid #ffffff !important; }

.table-paging a:focus {
  background-color: #ffffff; }
  .table-paging a:focus .arrow-right {
    border-left-color: #000000; }
  .table-paging a:focus .arrow-left {
    border-right-color: #000000; }

.paging-selected {
  color: #000000 !important; }
  .paging-selected:focus {
    background-color: #ffffff !important; }

.filter-trigger .arrow-down {
  border-top-color: #000000 !important; }

.subfilter-enabled,
.subfilter-disable-btn {
  background-color: #000000; }

.tag, .btn-tag {
  color: #000000; }
  .tag.green-bg, .green-bg.btn-tag, .tag.yellow-bg, .yellow-bg.btn-tag {
    background-color: #dddddd;
    color: #000000 !important; }

.icon-count,
a.icon-count {
  color: #000000; }

.disabled {
  opacity: .6; }

.multiselect.active {
  box-shadow: 0 0 0 1px #ffffff;
  transition: box-shadow .2s ease-out; }
.multiselect input[type="text"]:focus {
  box-shadow: none; }
.multiselect .multiselect-list li.selected .subfilter-enabled,
.multiselect .multiselect-list li.selected .subfilter-disable-btn,
.multiselect .multiselect-list li.selected .subfilter-disable-btn:active {
  box-shadow: 0 0 0 1px #ffffff; }

.checkbox-radio:focus + label span {
  box-shadow: 0 0 0 1px #ffffff;
  transition: box-shadow .2s ease-out; }

z-select button.focusable:focus,
.z-select button.focusable:focus, z-select .list:focus,
.z-select .list:focus, .multiselect:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="time"]:focus, input[type="file"]:focus, textarea:focus, select:focus {
  box-shadow: 0 0 0 1px #ffffff; }

.multiselect-suggest li.suggest-hover, .multiselect-matches li.suggest-hover {
  background-color: #000000; }

.suggest-found {
  color: #ffd98c; }

.dashboard-widget-graph-link:focus::after {
  background: #ffffff;
  height: 3px;
  bottom: -3px; }

.list-table .subfilter-enabled {
  background-color: #000000;
  box-shadow: 0 0 0 1px #ffffff; }
.list-table thead th {
  border-color: #3b3b3b; }
.list-table.compact-view .flh-na-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-info-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-warning-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-average-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-high-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-disaster-bg:not(.row-selected):not(:hover) {
  background: none; }
.list-table.compact-view td {
  box-shadow: inset 0 -1px 0 0 #333333; }
  .list-table.compact-view td.na-bg::before, .list-table.compact-view td.normal-bg::before, .list-table.compact-view td.info-bg::before, .list-table.compact-view td.warning-bg::before, .list-table.compact-view td.average-bg::before, .list-table.compact-view td.high-bg::before, .list-table.compact-view td.disaster-bg::before {
    min-height: 20px;
    box-shadow: inset 0 -1px 0 0 #333333; }
  .list-table.compact-view td.na-bg::after, .list-table.compact-view td.normal-bg::after, .list-table.compact-view td.info-bg::after, .list-table.compact-view td.warning-bg::after, .list-table.compact-view td.average-bg::after, .list-table.compact-view td.high-bg::after, .list-table.compact-view td.disaster-bg::after {
    top: 1px;
    transform: scale(0.8); }
  .list-table.compact-view td .icon-depend-up::before {
    background-position: -361px -731px; }
  .list-table.compact-view td .icon-depend-down::before {
    background-position: -361px -767px; }
  .list-table.compact-view td .icon-wizard-action {
    background: transparent url("../img/icon-sprite.svg?20220519") no-repeat -318px -624px; }

.filter-highlight-row-cb {
  display: none; }

.status-container .status-na-bg,
.status-container .status-info-bg,
.status-container .status-warning-bg,
.status-container .status-average-bg,
.status-container .status-high-bg,
.status-container .status-disaster-bg {
  border-color: rgba(0, 0, 0, 0.2);
  background-color: #dddddd;
  color: #000000; }

.na-bg,
.normal-bg,
.info-bg,
.average-bg,
.warning-bg,
.high-bg,
.disaster-bg,
.log-na-bg,
.log-info-bg,
.log-warning-bg,
.log-high-bg,
.log-disaster-bg {
  background-color: transparent !important; }
  .na-bg::before,
  .normal-bg::before,
  .info-bg::before,
  .average-bg::before,
  .warning-bg::before,
  .high-bg::before,
  .disaster-bg::before,
  .log-na-bg::before,
  .log-info-bg::before,
  .log-warning-bg::before,
  .log-high-bg::before,
  .log-disaster-bg::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    min-height: 28px;
    width: 34px; }
  .na-bg::after,
  .normal-bg::after,
  .info-bg::after,
  .average-bg::after,
  .warning-bg::after,
  .high-bg::after,
  .disaster-bg::after,
  .log-na-bg::after,
  .log-info-bg::after,
  .log-warning-bg::after,
  .log-high-bg::after,
  .log-disaster-bg::after {
    background: url("../img/icon-sprite.svg?20220519") no-repeat;
    content: '';
    position: absolute;
    left: 6px;
    top: 5px;
    width: 22px;
    height: 18px; }

.na-bg::after,
.log-na-bg::after {
  background-position: -106px -443px; }

.normal-bg::after {
  background-position: -76px -443px; }

.info-bg::after,
.log-info-bg::after {
  background-position: -136px -443px; }

.average-bg::after {
  background-position: -196px -442px; }

.warning-bg::after,
.log-warning-bg::after {
  background-position: -166px -443px; }

.high-bg::after,
.log-high-bg::after {
  background-position: -226px -443px; }

.disaster-bg::after,
.log-disaster-bg::after {
  background-position: -256px -443px; }

.na-bg::before,
.log-na-bg::before,
.normal-bg::before {
  background-color: #59db8f; }
/* ... */

